# src/route/route.user.js
@@ -1,10 +1,10 @@
 const express = require('express');
 const router = express.Router();
-const { updateUser, deleteUser, login, addUser, getUsers, getUserDetailById, getUserDetail } = require('../controller/controller.user')
+const { updateUser, deleteUser, login, addUser, getUsers, getUserDetailById, getUserDetail, regenerateToken } = require('../controller/controller.user')
 const { verifyToken, isAdmin } = require('../libs/libs.jwt')
 
 router.post('/login', login)
-
+router.post('/token', regenerateToken)
 router.post('', verifyToken, isAdmin, addUser);
 router.delete('/:id', verifyToken, isAdmin, deleteUser)
 router.put('/:id', verifyToken, isAdmin, updateUser)
